--- a/src/TinyPdf/TinyPdf.csproj
+++ b/src/TinyPdf/TinyPdf.csproj
@@ -3,5 +3,13 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>0.1.0</Version>
+    <PackageId>TinyPdf</PackageId>
+    <Authors>Ian Cowley</Authors>
+    <Description>TinyPdf is a minimal in-process PDF generation library targeting .NET.</Description>
+    <PackageTags>pdf,tiny,pdf-generator</PackageTags>
+    <RepositoryUrl>https://github.com/ian-cowley/tinypdf-csharp</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/ian-cowley/tinypdf-csharp</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 </Project>
