NuGet added.. if it works attempt 3

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -35,7 +35,7 @@ jobs:
         run: dotnet pack src/TinyPdf/TinyPdf.csproj --configuration Release --no-restore --output artifacts
 
       - name: Publish to nuget.org
-        if: ${{ secrets.NUGET_API_KEY && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) }}
+        if: env.NUGET_API_KEY != '' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: dotnet nuget push "artifacts/*.nupkg" --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json --skip-duplicate
