--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -1,16 +1,11 @@
-name: .NET build, test, and publish
-
-on:
-  push:
-    branches: [main]
-    tags: ['v*']
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
+      # Map the secret here so ALL steps can see it in their 'if' conditions
+      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,8 +15,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 10.0.x
-          cache: nuget
-
+          # Caching disabled for now to stop the YAML error
+          
       - name: Restore dependencies
         run: dotnet restore
 
@@ -35,7 +30,6 @@ jobs:
         run: dotnet pack src/TinyPdf/TinyPdf.csproj --configuration Release --no-restore --output artifacts
 
       - name: Publish to nuget.org
+        # This will now work because NUGET_API_KEY is defined at the job level
         if: env.NUGET_API_KEY != '' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: dotnet nuget push "artifacts/*.nupkg" --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json --skip-duplicate
