--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -1,3 +1,11 @@
+name: .NET build, test, and publish
+
+on:
+  push:
+    branches: [main]
+    tags: ['v*']
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
