--- a/src/TinyPdf/TinyPdf.csproj
+++ b/src/TinyPdf/TinyPdf.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>0.1.1</Version>
+    <Version>0.1.2</Version>
     <PackageId>TinyPdf</PackageId>
     <Authors>Ian Cowley</Authors>
     <Description>TinyPdf is a minimal in-process PDF generation library targeting .NET.</Description>
@@ -11,5 +11,10 @@
     <RepositoryUrl>https://github.com/ian-cowley/tinypdf-csharp</RepositoryUrl>
     <PackageProjectUrl>https://github.com/ian-cowley/tinypdf-csharp</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>NuGetREADME.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="NuGetREADME.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 </Project>
